修改启动界面

--- a/res/layout/activity_about.xml
+++ b/res/layout/activity_about.xml
@@ -53,7 +53,7 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="131dp"
-        android:src="@drawable/logo" />
+        android:src="@drawable/ic_launcher" />
 
     <TextView
         android:id="@+id/personsite"
