--- a/res/layout/one.xml
+++ b/res/layout/one.xml
@@ -9,6 +9,6 @@
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
         android:layout_marginLeft="10dp"
-        android:src="@drawable/yels"/>
+        android:src="@drawable/v2ex"/>
 
 </RelativeLayout>
