调整代码结构 优化UI

--- a/res/layout/activity_about.xml
+++ b/res/layout/activity_about.xml
@@ -12,7 +12,7 @@
         android:layout_below="@+id/imageView1"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="30dp"
-        android:text="Novelance"
+        android:text="V2EX"
         android:textColor="#ff757575"
         android:textSize="35sp" />
 
@@ -48,8 +48,8 @@
 
     <ImageView
         android:id="@+id/imageView1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="131dp"
