--- a/res/values-v11/styles.xml
+++ b/res/values-v11/styles.xml
@@ -5,6 +5,7 @@
         AppBaseTheme from res/values/styles.xml on API 11+ devices.
     -->
      <style name="AppBaseTheme" parent="android:Theme.Holo.Light">
+          <item name="android:windowIsTranslucent">true</item>
         <!-- API 11 theme customizations can go here. -->
     </style>
 
